--- a/DiputinderTests/Info.plist
+++ b/DiputinderTests/Info.plist
@@ -22,5 +22,11 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Gotham-Rounded-Book.ttf</string>
+		<string>Gotham-Rounded-Bold.ttf</string>
+		<string>Gotham-Rounded-Bold.ttf</string>
+	</array>
 </dict>
 </plist>
